--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/Controls/
     - assets/images/Items/Boxes/Box1/
     - assets/images/Terrain/
     - assets/images/Main Characters/Paari/
