teleportation animation added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/images/Controls/
     - assets/images/Items/Boxes/Box1/
     - assets/images/Terrain/
+    - assets/images/Main Characters/
     - assets/images/Main Characters/Paari/
     - assets/images/Main Characters/Malala/
     - assets/images/Menu/Buttons/
